--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "mouse-cat-server",
   "version": "1.0.0",
-  "description": "Socket.io WebSocket server for Mouse and Cat multiplayer game",
+  "description": "Socket.io server for Mouse and Cat game",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "pg": "^8.13.1",
+    "dotenv": "^16.4.7"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "keywords": ["socket.io", "websocket", "game", "multiplayer"],
-  "author": "Dairon Luis",
-  "license": "MIT"
+  }
 }
