--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "socket.io": "^4.8.1",
     "pg": "^8.13.1",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": ">=18.0.0"
